Fix: do not submit student exams which were not started